@@ -1,0 +1,15 @@
+class Object
+  CROSS_COMPILING = RUBY_PLATFORM
+  remove_const :RUBY_PLATFORM
+  remove_const :RUBY_VERSION
+  remove_const :RUBY_DESCRIPTION if defined?(RUBY_DESCRIPTION)
+  RUBY_PLATFORM = "@arch@"
+  RUBY_VERSION = "@MAJOR@.@MINOR@.@TEENY@"
+  RUBY_DESCRIPTION = "ruby #{RUBY_VERSION} (#{Time.now.strftime("%Y-%m-%d")}) [#{RUBY_PLATFORM}]"
+end
+if RUBY_PLATFORM =~ /mswin|bccwin|mingw/
+  class File
+    remove_const :ALT_SEPARATOR
+    ALT_SEPARATOR = "\\"
+  end
+end
